# TaylorDashv1

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT_GUIDE.md  API_CONTRACT_VALIDATION_REPORT.md  CHANGELOG.md  CLEAN_ARCHITECTURE_DESIGN.md  CLEAN_SYSTEM_SUMMARY.md  CODEOWNERS  COMMON_TASKS.md  COMPREHENSIVE_AUTHENTICATION_SECURITY_AUDIT_REPORT.md  COMPREHENSIVE_SYSTEM_VALIDATION_REPORT.md  COMPREHENSIVE_UI_TEST_REPORT.md  CONTRIBUTING.md  CURRENT_SYSTEM_STATE.md  DECISION_TREES.md  ERROR_HANDLING_STRATEGY.md  FINAL_SYSTEM_STATUS_REPORT.md  INFRASTRUCTURE_AUDIT.md  INTEGRATION_MAP.md  LICENSE  Makefile  QA_COMPREHENSIVE_REPORT.md  README.md  SECURITY.md  SECURITY_CLEANUP_NOTES.md  SERVICE_CONFLICT_ANALYSIS.md  TECHNICAL_SPECIFICATION.md  TROUBLESHOOTING_MATRIX.md  comprehensive_ui_test.py  comprehensive_ui_test_fixed.py  comprehensive_ui_test_report.md  comprehensive_ui_test_report_20250913_003848.json  comprehensive_ui_test_report_20250913_004013.json  comprehensive_ui_test_report_fixed_20250913_004332.json  docker-compose.yml  manual_ui_inspection.py  mkdocs.yml  openapi_spec.json  (+12 more)
backend/: .coverage  .env.example  Dockerfile  PROJECTS_API.md  QUICK_REFERENCE.md  README.md  README_ARCHITECTURE.md  SECURITY_TEST_REPORT.md  pyproject.toml  security_validation_test.py  simple_security_test.py  test_projects_api.py
backend/app/: README.md  __init__.py  auth.py  database.py  health_stack.py  logging_middleware.py  logging_utils.py  main.py  models.py  mqtt_client.py  otel.py  schemas.py  security.py
backend/tests/: README.md  (+1 more)
docs/: README.md  (+4 more)
(+251 files in other folders)
