[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taylordash-backend"
version = "0.1.0"
description = "TaylorDash Backend API"
authors = [
    {name = "TaylorDash Team"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-asgi>=0.42b0",
    "opentelemetry-instrumentation-asyncpg>=0.42b0",
    "opentelemetry-instrumentation-httpx>=0.42b0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "aiomqtt>=1.2.0",
    "asyncpg>=0.29.0",
    "jsonschema>=4.20.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "pyjwt[crypto]>=2.8.0",
    "httpx>=0.25.0",
    "aiohttp>=3.8.0",
    "bcrypt>=4.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]